[gd_scene load_steps=3 format=3 uid="uid://b20bicsiskf8j"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_yckbp"]

[sub_resource type="LabelSettings" id="LabelSettings_gojo7"]
font_size = 60

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yckbp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -443.0
offset_top = 170.0
offset_right = 443.0
offset_bottom = 271.0
grow_horizontal = 2
text = "GodotSourceMovement DEMO"
label_settings = SubResource("LabelSettings_gojo7")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -91.0
offset_right = 250.0
offset_bottom = 309.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="map1" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "BunnyHopping Map"

[node name="map2" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Interaction Map"

[node name="map3" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Stairs Map"

[node name="quit" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "quit"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/map2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/map3" to="." method="_on_map_3_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
